--- a/p5stuff/index.html
+++ b/p5stuff/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="/socket.io/socket.io.js"></script>
   <script src="libs/p5.js"></script>
   <script src="libs/p5.utils.min.js"></script>
   <script src="libs/p5.gui.js"></script>
   <script src="libs/quicksettings.js"></script>
   <script src="libs/p5-svg.js"></script>
+  <script src="libs/p5.dom.min.js"></script>
+    <script src="osc-browser.min.js"></script>
+   <script src="osc.js"></script>
   <script src="helpers.js"></script>
   <script src="midi.js"></script>
   <meta charset="utf-8" />
@@ -14,26 +18,26 @@
     html, body {
       margin: 0;
       padding: 0;
-      background: black;
+      background: white;
     }
     main {
       text-align: center;
     }
     .p5Canvas {
-      box-shadow: 0px 0 10px gray;
+      /*box-shadow: 0px 0 10px gray;*/
       background: white;
-      margin-top: 1rem;
+      /*margin-top: 1rem;*/
     }
     .overlay {
       width: 1122px;
       height: 1587px;
       position: absolute;
-      box-shadow: inset 0px 0px 0px 100px white;
-      top: 16px;
-      left: 28.1vw;
+      /*box-shadow: inset 0px 0px 0px 100px white;*/
+      top: 0px;
+      left: 0;
     }
     .qs_main {
-    transform: scale(2) translate(3rem, 14rem);
+    /*transform: scale(2) translate(3rem, 14rem);*/
     }
   </style>
 </head>
@@ -43,7 +47,7 @@
 </main>
 <!--<script src="data.js"></script>-->
 <!-- <script src="sketch.js"></script>-->
-<!-- <script src="saves/save_20240509_1417_coil_path.js"></script>-->
+ <!-- <script src="saves/save_20240509_1417_coil_path.js"></script> -->
 <!-- <script src="saves/save_20240424_2206_circle_coil.js"></script>-->
 <!-- <script src="saves/save_20240503_1241_circle_coil_v2.js.js"></script>-->
 <!--<script src="saves/save_20240422_1022_circlegrid_voronoi_a3.js"></script>-->
@@ -53,13 +57,14 @@
 <!--<script src="saves/save_20230919_1050_3d_grid_colors.js"></script>-->
 <!--<script src="saves/save_20231124_1414_wavy_lines_a3.js"></script>-->
 <!--<script src="saves/save_20231125_1139_angel_circles.js"></script>-->
-<!--<script src="saves/save_20231116_1352_test_1.js"></script>-->
+<script src="saves/save_20231116_1352_test_1.js"></script>
+<!-- <script src="saves/save_20231116_1352_test_1_line_single.js"></script> -->
 <!-- <script src="saves/save_20231116_1202_crossgrid_a3.js"></script>-->
 <!-- <script src="saves/save_20231110_1055_perlin_donut_a3.js"></script>-->
 <!-- <script src="saves/save_20231110_1055_perlin_donut_a3_2.js"></script>-->
 <!--<script src="saves/save_20231220_1354_noise_circle.js"></script>-->
 <!--<script src="saves/save_20231110_1850_voronoi_plane_a3.js"></script>-->
-<script src="saves/save_20231110_1850_voronoi_plane_a1.js"></script>
+<!-- <script src="saves/save_20231110_1850_voronoi_plane_a1.js"></script> -->
 <!--<script src="saves/save_20231109_1358_vertical_lignes_noise_a4.js"></script>-->
 <!--<script src="saves/save_20231110_1044_vertical_lignes_noise_a3.js"></script>-->
 <!--<script src="saves/save_20231108_2321_concentric_circle_dots.js"></script>-->
